feat: implement feedback form
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -683,3 +683,7 @@ span {
 textarea {
   resize: none;
 }
+
+.toast-container {
+  z-index: 1000000 !important; /* Increase the z-index as needed */
+}
