--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -120,6 +120,7 @@ $theme-violet-2A2C3C: #2A2C3C;
 $theme-violet-22232E: #22232E;
 $theme-violet-272831: #272831;
 $theme-violet-2E2F3D: #2E2F3D;
+$theme-violet-323548: #323548;
 $theme-violet-1c1d27: #1c1d27;
 
 $theme-red-e5acb2: #e5acb2;
@@ -506,6 +507,7 @@ $sparrow-bg-colors: (
   tertiary-400 : $theme-violet-22232E,
   tertiary-500 : $theme-violet-272831,
   tertiary-600 : $theme-violet-2E2F3D,
+  tertiary-650 : $theme-violet-323548,
   tertiary-700 : $theme-violet-1c1d27,
 
   danger-100 : $theme-red-e5acb2,
