--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -275,6 +275,7 @@ $theme-red-230408: #230408;
   --bg-primary-500 : #{$theme-blue-2B5ED4};
   --bg-primary-600 : #{$theme-blue-1D3650};
 
+  --bg-secondary-100 : #{$theme-grey-ffffff};
   --bg-secondary-150 : #{$theme-grey-e5e5e5};
   --bg-secondary-200 : #{$theme-grey-8A9299};
   --bg-secondary-300 : #{$theme-grey-45494D};
