fix : add hover in different places [123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -143,6 +143,7 @@ $theme-red-230408: #230408;
 
 
 :root {
+  --tab-bar-hover: #{$sparrow-email-invite-bg-color};
   --blackColor: #{$sparrow-black};
   --defaultcolor: #{$sparrow-default};
   --recentApiText: #{$sparrow-recentApiText};
