--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -93,6 +93,7 @@ $theme-grey-ffffff: #FFFFFF;
 $theme-grey-e5e5e5: #e5e5e5;
 $theme-grey-C4CBDA: #C4CBDA;
 $theme-grey-8A9299: #8A9299;
+$theme-grey-CCCCCC : #CCCCCC;
 $theme-grey-999999: #999999;
 $theme-grey-83899F: #83899F;
 $theme-grey-636566: #636566;
@@ -249,6 +250,7 @@ $theme-red-230408: #230408;
   --text-secondary-900 : #{$theme-grey-000000};
 
   --text-tertiary-100 : #{$theme-violet-676A80};
+  --text-tertiary-200 : #{$theme-violet-323548};
   --text-tertiary-300 : #{$theme-violet-2A2C3C};
   --text-tertiary-400 : #{$theme-violet-22232E};
   --text-tertiary-500 : #{$theme-violet-272831};
@@ -292,6 +294,7 @@ $theme-red-230408: #230408;
   --bg-secondary-700 : #{$theme-grey-161617};
   --bg-secondary-800 : #{$theme-grey-151515};
   --bg-secondary-900 : #{$theme-grey-000000};
+  --bg-secondary-1000 : #{$theme-grey-CCCCCC};
 
   --bg-tertiary-100 : #{$theme-violet-676A80};
   --bg-tertiary-300 : #{$theme-violet-2A2C3C};
