--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -106,6 +106,7 @@ $theme-grey-1A1A1A: #1A1A1A;
 $theme-grey-161617: #161617;
 $theme-grey-151515: #151515;
 $theme-grey-000000: #000000;
+$theme-grey-191919: #191919;
 
 
 $theme-blue-F5F6F8: #F5F6F8;
@@ -247,6 +248,7 @@ $theme-red-230408: #230408;
   --text-secondary-300 : #{$theme-grey-45494D};
   --text-secondary-350 : #{$theme-grey-636566};
   --text-secondary-400 : #{$theme-grey-313233};
+  --text-secondary-450 : #{$theme-grey-191919};
   --text-secondary-500 : #{$theme-grey-272727};
   --text-secondary-600 : #{$theme-grey-212222};
   --text-secondary-700 : #{$theme-grey-161617};
