--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -100,6 +100,7 @@ $theme-grey-999999: #999999;
 $theme-grey-CCCCCC : #CCCCCC;
 $theme-grey-83899F: #83899F;
 $theme-grey-636566: #636566;
+$theme-grey-484848: #484848;
 $theme-grey-45494D: #45494D;
 $theme-grey-313233: #313233;
 $theme-grey-272727: #272727;
@@ -248,6 +249,7 @@ $theme-red-230408: #230408;
   --text-secondary-150 : #{$theme-grey-e5e5e5};
   --text-secondary-200 : #{$theme-grey-8A9299};
   --text-secondary-250 : #{$theme-grey-83899F};
+  --text-secondary-290 : #{$theme-grey-484848};
   --text-secondary-300 : #{$theme-grey-45494D};
   --text-secondary-350 : #{$theme-grey-636566};
   --text-secondary-400 : #{$theme-grey-313233};
@@ -296,6 +298,7 @@ $theme-red-230408: #230408;
   --bg-secondary-110 : #{$theme-grey-F5F5F5};
   --bg-secondary-150 : #{$theme-grey-e5e5e5};
   --bg-secondary-200 : #{$theme-grey-8A9299};
+  --bg-secondary-290 : #{$theme-grey-484848};
   --bg-secondary-300 : #{$theme-grey-45494D};
   --bg-secondary-400 : #{$theme-grey-313233};
   --bg-secondary-500 : #{$theme-grey-272727};
@@ -342,6 +345,7 @@ $theme-red-230408: #230408;
   --border-secondary-110 : #{$theme-grey-F5F5F5};
   --border-secondary-150 : #{$theme-grey-e5e5e5};
   --border-secondary-200 : #{$theme-grey-8A9299};
+  --border-secondary-290 : #{$theme-grey-484848};
   --border-secondary-300 : #{$theme-grey-45494D};
   --border-secondary-400 : #{$theme-grey-313233};
   --border-secondary-500 : #{$theme-grey-272727};
@@ -383,6 +387,7 @@ $theme-red-230408: #230408;
   --icon-secondary-110 : #{$theme-grey-F5F5F5};
   --icon-secondary-150 : #{$theme-grey-e5e5e5};
   --icon-secondary-200 : #{$theme-grey-8A9299};
+  --icon-secondary-290 : #{$theme-grey-484848};
   --icon-secondary-300 : #{$theme-grey-45494D};
   --icon-secondary-400 : #{$theme-grey-313233};
   --icon-secondary-500 : #{$theme-grey-272727};
@@ -521,6 +526,7 @@ $sparrow-text-colors: (
   secondary-170 : $theme-grey-C4CBDA,
   secondary-200 : $theme-grey-8A9299,
   secondary-250 : $theme-grey-636566,
+  secondary-290 : $theme-grey-484848,
   secondary-300 : $theme-grey-45494D,
   secondary-400 : $theme-grey-313233,
   secondary-500 : $theme-grey-272727,
@@ -561,6 +567,7 @@ $sparrow-bg-colors: (
   secondary-150 : $theme-grey-e5e5e5,
   secondary-170 : $theme-grey-C4CBDA,
   secondary-200 : $theme-grey-8A9299,
+  secondary-290 : $theme-grey-484848,
   secondary-300 : $theme-grey-45494D,
   secondary-400 : $theme-grey-313233,
   secondary-500 : $theme-grey-272727,
@@ -603,6 +610,7 @@ $sparrow-border-colors: (
   secondary-150 : $theme-grey-e5e5e5,
   secondary-170 : $theme-grey-C4CBDA,
   secondary-200 : $theme-grey-8A9299,
+  secondary-290 : $theme-grey-484848,
   secondary-300 : $theme-grey-45494D,
   secondary-400 : $theme-grey-313233,
   secondary-500 : $theme-grey-272727,
