fix: resolved comment[123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -295,6 +295,7 @@ $theme-red-230408: #230408;
   --bg-secondary-200 : #{$theme-grey-8A9299};
   --bg-secondary-300 : #{$theme-grey-45494D};
   --bg-secondary-400 : #{$theme-grey-313233};
+  --bg-secondary-450 : #{$theme-grey-191919};
   --bg-secondary-500 : #{$theme-grey-272727};
   --bg-secondary-550 : #{$theme-grey-1A1A1A};
   --bg-secondary-600 : #{$theme-grey-212222};
@@ -340,6 +341,7 @@ $theme-red-230408: #230408;
   --border-secondary-200 : #{$theme-grey-8A9299};
   --border-secondary-300 : #{$theme-grey-45494D};
   --border-secondary-400 : #{$theme-grey-313233};
+  --border-secondary-450 : #{$theme-grey-191919};
   --border-secondary-500 : #{$theme-grey-272727};
   --border-secondary-600 : #{$theme-grey-212222};
   --border-secondary-700 : #{$theme-grey-161617};
@@ -380,6 +382,7 @@ $theme-red-230408: #230408;
   --icon-secondary-200 : #{$theme-grey-8A9299};
   --icon-secondary-300 : #{$theme-grey-45494D};
   --icon-secondary-400 : #{$theme-grey-313233};
+  --icon-secondary-450 : #{$theme-grey-191919};
   --icon-secondary-500 : #{$theme-grey-272727};
   --icon-secondary-600 : #{$theme-grey-212222};
   --icon-secondary-700 : #{$theme-grey-161617};
