fix: documentation implementation completed[123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -101,11 +101,12 @@ $theme-grey-83899F: #83899F;
 $theme-grey-636566: #636566;
 $theme-grey-45494D: #45494D;
 $theme-grey-313233: #313233;
+$theme-grey-4D4D4D: #4D4D4D;
 $theme-grey-272727: #272727;
 $theme-grey-212222: #212222;
 $theme-grey-1A1A1A: #1A1A1A;
 $theme-grey-161617: #161617;
-$theme-grey-151515: #121212;
+$theme-grey-151515: #151515;
 $theme-grey-000000: #000000;
 $theme-grey-191919: #191919;
 
@@ -114,14 +115,16 @@ $theme-blue-F5F6F8: #F5F6F8;
 $theme-blue-B0B0B0: #b0b0b0;
 $theme-blue-9CDCFE: #9CDCFE;
 $theme-blue-85C2FF: #85C2FF;
-$theme-blue-1193F0: #1193F0;
+$theme-blue-87b9f7: #87b9f7;
 $theme-blue-5980DC: #5980DC;
+$theme-blue-1193F0: #1193F0;
 $theme-blue-3670F7: #3670F7;
 $theme-blue-0B5ED7: #0B5ED7;
 $theme-blue-2B5ED4: #2B5ED4;
 $theme-blue-303F4F: #303F4F;
 $theme-blue-1D3650: #1D3650;
 $theme-blue-74AEF6: #74AEF6;
+$theme-blue-11253a: #11253a;
 
 $theme-violet-676A80: #676A80;
 $theme-violet-2A2C3C: #2A2C3C;
@@ -241,6 +244,7 @@ $theme-red-230408: #230408;
   --text-primary-300 : #{$theme-blue-3670F7};
   --text-primary-350 : #{$theme-blue-74AEF6};
   --text-primary-400 : #{$theme-blue-0B5ED7};
+  --text-primary-500 : #{$theme-blue-87b9f7};
 
   --text-secondary-50 : #{$theme-grey-999999};
   --text-secondary-100 : #{$theme-grey-ffffff};
@@ -291,6 +295,7 @@ $theme-red-230408: #230408;
   --bg-primary-400 : #{$theme-blue-0B5ED7};
   --bg-primary-500 : #{$theme-blue-2B5ED4};
   --bg-primary-600 : #{$theme-blue-1D3650};
+  --bg-primary-700 : #{$theme-blue-11253a};
 
   --bg-secondary-100 : #{$theme-grey-ffffff};
   --bg-secondary-150 : #{$theme-grey-e5e5e5};
@@ -302,6 +307,7 @@ $theme-red-230408: #230408;
   --bg-secondary-550 : #{$theme-grey-1A1A1A};
   --bg-secondary-600 : #{$theme-grey-212222};
   --bg-secondary-700 : #{$theme-grey-161617};
+  --bg-secondary-750 : #{$theme-grey-4D4D4D};
   --bg-secondary-800 : #{$theme-grey-151515};
   --bg-secondary-900 : #{$theme-grey-000000};
   --bg-secondary-1000 : #{$theme-grey-CCCCCC};
