--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -271,6 +271,7 @@ $theme-red-230408: #230408;
   --text-tertiary-100 : #{$theme-violet-676A80};
   --text-tertiary-200 : #{$theme-violet-323548};
   --text-tertiary-250 : #{$theme-violet-1C1D2B};
+  --text-tertiary-350 : #{$theme-violet-1C1D2B};
   --text-tertiary-300 : #{$theme-violet-2A2C3C};
   --text-tertiary-400 : #{$theme-violet-22232E};
   --text-tertiary-500 : #{$theme-violet-272831};
@@ -370,6 +371,7 @@ $theme-red-230408: #230408;
   --border-secondary-900 : #{$theme-grey-000000};
 
   --border-tertiary-100 : #{$theme-violet-676A80};
+  --border-tertiary-250 : #{$theme-violet-1C1D2B};
   --border-tertiary-300 : #{$theme-violet-2A2C3C};
   --border-tertiary-400 : #{$theme-violet-22232E};
   --border-tertiary-500 : #{$theme-violet-272831};
