--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -100,6 +100,7 @@ $theme-grey-CCCCCC : #CCCCCC;
 $theme-grey-83899F: #83899F;
 $theme-grey-636566: #636566;
 $theme-grey-45494D: #45494D;
+$theme-grey-808080: #808080;
 $theme-grey-313233: #313233;
 $theme-grey-272727: #272727;
 $theme-grey-212222: #212222;
@@ -249,6 +250,7 @@ $theme-red-230408: #230408;
   --text-secondary-300 : #{$theme-grey-45494D};
   --text-secondary-350 : #{$theme-grey-636566};
   --text-secondary-400 : #{$theme-grey-313233};
+  --text-secondary-450 : #{$theme-grey-808080};
   --text-secondary-500 : #{$theme-grey-272727};
   --text-secondary-600 : #{$theme-grey-212222};
   --text-secondary-700 : #{$theme-grey-161617};
