--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -559,6 +559,7 @@ $sparrow-text-colors: (
   secondary-800 : $theme-grey-151515,
   secondary-850 : $theme-grey-121212,
   secondary-900 : $theme-grey-000000,
+  secondary-1000 : $theme-grey-CCCCCC,
 
   tertiary-100 : $theme-violet-676A80,
   tertiary-190 : $theme-violet-37394E,
@@ -603,6 +604,7 @@ $sparrow-bg-colors: (
   secondary-800 : $theme-grey-151515,
   secondary-850 : $theme-grey-121212,
   secondary-900 : $theme-grey-000000,
+  secondary-1000 : $theme-grey-CCCCCC,
 
   tertiary-100 : $theme-violet-676A80,
   tertiary-190 : $theme-violet-37394E,
@@ -648,6 +650,7 @@ $sparrow-border-colors: (
   secondary-700 : $theme-grey-161617,
   secondary-800 : $theme-grey-151515,
   secondary-900 : $theme-grey-000000,
+  secondary-1000 : $theme-grey-CCCCCC,
 
   tertiary-100 : $theme-violet-676A80,
   tertiary-190 : $theme-violet-37394E,
