fix: implement my workspace tab[123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -112,6 +112,7 @@ $theme-grey-151515: #151515;
 $theme-grey-000000: #000000;
 $theme-grey-191919: #191919;
 $theme-grey-121212: #121212;
+$theme-grey-808080: #808080;
 
 
 $theme-blue-F5F6F8: #F5F6F8;
@@ -320,9 +321,11 @@ $theme-red-230408: #230408;
   --bg-secondary-800 : #{$theme-grey-151515};
   --bg-secondary-850 : #{$theme-grey-121212};
   --bg-secondary-900 : #{$theme-grey-000000};
+  --bg-secondary-950 : #{$theme-grey-808080};
   --bg-secondary-1000 : #{$theme-grey-CCCCCC};
 
   --bg-tertiary-100 : #{$theme-violet-676A80};
+  --bg-tertiary-250 : #{$theme-violet-1C1D2B};
   --bg-tertiary-300 : #{$theme-violet-2A2C3C};
   --bg-tertiary-400 : #{$theme-violet-22232E};
   --bg-tertiary-500 : #{$theme-violet-272831};
@@ -367,6 +370,8 @@ $theme-red-230408: #230408;
   --border-secondary-700 : #{$theme-grey-161617};
   --border-secondary-800 : #{$theme-grey-151515};
   --border-secondary-900 : #{$theme-grey-000000};
+  --border-secondary-950 : #{$theme-grey-808080};
+
 
   --border-tertiary-100 : #{$theme-violet-676A80};
   --border-tertiary-300 : #{$theme-violet-2A2C3C};
@@ -410,6 +415,8 @@ $theme-red-230408: #230408;
   --icon-secondary-700 : #{$theme-grey-161617};
   --icon-secondary-800 : #{$theme-grey-151515};
   --icon-secondary-900 : #{$theme-grey-000000};
+  --icon-secondary-950 : #{$theme-grey-808080};
+
 
   --icon-tertiary-100 : #{$theme-violet-676A80};
   --icon-tertiary-300 : #{$theme-violet-2A2C3C};
