fix: Fixed Ui bugs  [123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -106,7 +106,7 @@ $theme-grey-484848: #484848;
 $theme-grey-4D4D4D: #4D4D4D;
 $theme-grey-45494D: #45494D;
 $theme-grey-353646: #353646;
-
+$theme-grey-333333: #333333;
 $theme-grey-313233: #313233;
 
 $theme-grey-272727: #272727;
@@ -117,6 +117,7 @@ $theme-grey-151515: #151515;
 $theme-grey-000000: #000000;
 $theme-grey-191919: #191919;
 $theme-grey-121212: #121212;
+
 
 $theme-blue-F5F6F8: #F5F6F8;
 $theme-blue-B0B0B0: #b0b0b0;
@@ -318,6 +319,7 @@ $theme-red-230408: #230408;
   --bg-secondary-290 : #{$theme-grey-484848};
   --bg-secondary-300 : #{$theme-grey-45494D};
   --bg-secondary-320 : #{$theme-grey-353646};
+  --bg-secondary-330 : #{$theme-grey-333333};
   --bg-secondary-350 : #{$theme-grey-888888};
   --bg-secondary-400 : #{$theme-grey-313233};
   --bg-secondary-450 : #{$theme-grey-191919};
