--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -422,6 +422,7 @@ $theme-red-230408: #230408;
   --icon-secondary-110 : #{$theme-grey-F5F5F5};
   --icon-secondary-150 : #{$theme-grey-e5e5e5};
   --icon-secondary-200 : #{$theme-grey-8A9299};
+  --icon-secondary-220 : #{$theme-grey-60616B};
   --icon-secondary-290 : #{$theme-grey-484848};
   --icon-secondary-300 : #{$theme-grey-45494D};
   --icon-secondary-400 : #{$theme-grey-313233};
